# aoc-2022-rust

./: Cargo.toml  README.md
.cargo/: config.toml
